@startuml
'https://plantuml.com/class-diagram

class todo {
root = "mainTodo.fxml"
Scene scene
Stage primaryStage
changeScene(): takes in specified fxml file name to change window
}

todo *-- mainController

class mainController {
openFile(): opens existing .txt file
exportFile(): exports current file to .txt file
--
newList(): creates new todo list within file
openList(): opens currently selected todo list within file
deleteList(): deletes selected todo list
}

mainController o- openController: openFile() >
mainController o-- saveListController: exportFile() >

mainController --|> editController: openList() >
editController --|> file: returns todo lists after making changes

openController --|> file

class editController {
newTodo(): creates new todo within current list
deleteTodo(): deletes selected todo
deleteAll(): delete all todo items
saveNameList(): saves name of current todo list
exportList(): exports list to .txt file instead of entire file
filterStatus(): program will cycle through various filters of completed / incomplete / all
--
editTodoName(): changes name of current todo item
saveTodoChanges(): program will check and save any changes in due date, status or description of todo item
}

editController o-- saveTodoController: exportList() >

class openController {
Prompts for file path of file to open.
Reads file into file.java
}

class saveListController {
Prompts for file path to save .txt file at for entire file.
User can hit "Go Back" to get back to mainController.
}

class saveTodoController {
Prompts for file path to save .txt file at for only currently opened todo list.
User can hit "Go Back" to get back to mainController.
}

class file {
Will be used to store all data on todo lists and data manipulations.
}

@enduml